<resources>
    <string name="app_name">ChatWifiTest</string>
    <string name="chat_peple">XXX</string>
    <string name="my_name">我</string>

    <!-- Emoji -->
    <string name="face_recently">最近</string>
    <string name="face_Emoji">Emoji</string>
    <string name="face_set_one">经典</string>

    <!-- Contacts -->
    <string name="menu_settings">Settings</string>
    <string name="title_activity_view_pager_demo">ViewPagerDemo</string>
    <string name="contacts">联系人</string>
    <string name="messages">消息</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- longin -->
    <string name="action_sign_in">登录</string>
    <string name="prompt_name">昵称</string>
    <string name="prompt_password">密码</string>
    <string name="error_invalid_name">昵称无效</string>
    <string name="error_password_required">请输入密码</string>
    <string name="error_name_required">请输入昵称</string>
    <string name="action_new_user">新用户注册</string>

    <!-- register -->
    <string name="prompt_reconfirm_password">确认密码</string>
    <string name="action_register">完成注册</string>
    <string name="error_repassword_required">请确认密码</string>
    <string name="error_password_inconstancy">两次输入密码不一致</string>

    <!-- sip register msg -->
    <string name="user_has_existed">用户已存在</string>
    <string name="server_error">服务器错误，注册失败！</string>
    <string name="register_success">注册成功</string>

    <!-- sip login msg -->
    <string name="user_not_exist">用户不存在</string>
    <string name="password_incorrect">密码错误</string>
    <string name="user_has_logined">用户已登录</string>
    <string name="login_success">登录成功</string>
</resources>
